public/global.css
html, body {
	position: relative;
	width: 100%;
	height: 100%;
}
body {
	border-top: 0.5rem solid hsla(15, 100%, 50%, 1);
	color: #333;
	margin: 0;
	padding: 2rem;
	box-sizing: border-box;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}
a {
	color: hsl(195, 100%, 40%);
	text-decoration: none;
	box-shadow: inset 0 -3px 0 hsl(190, 100%, 80%);
	padding-bottom: 0;
}

a:hover {
	box-shadow: inset 0 -3px 0 hsl(190, 80%, 60%);
}

a:visited {
	color: rgb(0,80,160);
}

label {
	display: block;
}

input, button, select, textarea {
	font-family: inherit;
	font-size: inherit;
	padding: 0.4rem;
	margin: 0 0 0.5rem 0;
	box-sizing: border-box;
	border: 1px solid #ccc;
	border-radius: 0.25rem;
}

input:disabled {
	color: #ccc;
}

input[type="range"] {
	height: 0;
}

button {
	color: #fff;
	background-color: hsla(15, 100%, 50%, 1);
	outline: none;
	border: 0;
	border-top: 1px solid hsla(15, 100%, 70%, 1);
	box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.3);
	padding: 0.5rem 0.8rem;
}

button:focus {
	box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.5);
}

button:active {
	box-shadow: none;
	border-top-color: hsl(15, 100%, 50%);
}

button[disabled] {
	cursor: not-allowed;
	background-color: hsl(15, 50%, 40%);
}

.cf::after, .cf::before {
	content: " ";
	display: table;
}

.cf::after {
	clear: both;
}

	.dark.color-mode {
		background-color: #333;
	}
	.dark.color-mode body {
		color: #fff;
	}
	.dark input, button, select, textarea {
		border: 1px solid #666;
		color: #fff;
	}
	.dark.color-mode input, .dark.color-mode textarea {
		background-color: #000;
	}
	.dark.color-mode input:disabled {
		color: #666;
	}

